# isiprint

./: .gitignore  index.html  package.json
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  graphql.rs  http_server.rs  lib.rs  main.rs  network_discovery.rs  persistence.rs  printer.rs  raw_printer.rs  state.rs
src/components/: AccountTab.css  AccountTab.tsx  AnimatedLogo.tsx  LoginScreen.tsx  LogsTab.css  LogsTab.tsx  LordIcon.tsx  PrintersTab.css  PrintersTab.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json  fr.json
